crates/codira_hir/src/ty/snapshots/codira_hir__ty__tests__heal_contract_custom_fault_class.snap
---
source: crates/codira_hir/src/ty/tests.rs
expression: "infer(r#\"\n    @heal(on: [Custom(\"DiskFull\")], strategies: [DegradeGracefully])\n    func risky() -> i64 { 0 }\"#,)"
---
85..90 '{ 0 }': i64
87..88 '0': i64
